# git-annex-archiver

./: Cargo.toml
.github/workflows/: release.yml
src/: commands.rs  daemon.rs  format.rs  main.rs  types.rs
src/commands/: allocate.rs  maintain.rs  sync.rs
src/platform/: macos.rs  windows.rs
