[package]
name = "git-annex-archiver"
version = "0.2.2"
edition = "2021"

[dependencies]
image = "0.24.7"
lazy_static = "1.4.0"
regex = "1.10.2"
tao = "0.24.0"
tray-icon = "0.11.1"
tokio = { version = "1.35.1", features = ["full"] }
chrono = "0.4.31"
home = "0.5.9"
glob = "0.3.1"
toml = "0.8.8"
serde = "1.0.195"
rand = { version = "0.8.5", features = ["std"] }
filetime = "0.2"
walkdir = "2.4.0"
clap = { version = "4.4.18", features = ["derive"] }
async-cron-scheduler = "2.0.1"
url = "2.5.0"
xattr = "1.3.1"
plist = "1"
serde_json = "1.0"
rev_buf_reader = "0.3.0"

[profile.release]
lto = true
strip = "debuginfo"